# soldering-pedestal

./: .gitignore  README.md
handpiece/software/: CMakeLists.txt  README.md
handpiece/software/cmake/: avr-gcc-toolchain.cmake  project-toolchain-config.cmake
handpiece/software/include/: usi_i2c_slave.h
handpiece/software/src/: main.c  usi_i2c_slave.c
